--- a/genesearch/templates/upload_genes.html
+++ b/genesearch/templates/upload_genes.html
@@ -34,7 +34,7 @@
         <select id="upload_disease_type" name="upload_disease_type"
         onchange="Get_Next_type('upload_disease_type','Get_species')">
             <option id="not_upload_disease_data">----</option>
-                <option id="Adipose_differentiation" value="Adipose_differentiation">Adipose differentiation</option>
+                <!-- <option id="Adipose_differentiation" value="Adipose_differentiation">Adipose differentiation</option> -->
                 <option id="Glucose_metabolism" value="Glucose_metabolism">Glucose metabolism</option>
                 <option id="Liver_cancer" value="Liver_cancer">Liver cancer</option>
                 <option id="Macrophage" value="Macrophage">Macrophage</option>
